# spass-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/spass-cli/: Cargo.toml
crates/spass-cli/src/: cli.rs  error.rs  main.rs
crates/spass-cli/src/commands/: decrypt.rs  generate.rs  info.rs  mod.rs
crates/spass-cli/src/output/: formatter.rs  mod.rs
crates/spass-cli/tests/: cli_tests.rs
crates/spass-rs/: Cargo.toml  README.md
crates/spass-rs/benches/: decrypt_bench.rs
crates/spass-rs/src/: lib.rs  testkit.rs
crates/spass-rs/src/crypto/: cipher.rs  key_derivation.rs  mod.rs  validator.rs
crates/spass-rs/src/domain/: collection.rs  entry.rs  error.rs  mod.rs  types.rs
crates/spass-rs/src/export/: csv.rs  json.rs  mod.rs
crates/spass-rs/src/format/: decoder.rs  mod.rs  validator.rs
crates/spass-rs/src/parser/: mod.rs  registry.rs  spass.rs  trait_def.rs
crates/spass-rs/src/pipeline/: builder.rs  decrypt.rs  mod.rs
crates/spass-rs/tests/: integration_tests.rs
crates/spass-rs/tests/integration/: decrypt_test.rs  mod.rs
crates/spass-wasm/: Cargo.toml
crates/spass-wasm/src/: lib.rs
