[workspace]
members = [
    "crates/spass-rs",
    "crates/spass-cli",
    "crates/spass-wasm",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["CoreEngineX"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/CoreEngineX/spass-core"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
hmac = "0.12"

secrecy = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"

clap = { version = "4.5", features = ["derive"] }

base64 = "0.22"
hex = "0.4"
csv = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
