[package]
name = "spass"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Decrypt and convert Samsung Pass (.spass) export files"
repository = "https://github.com/CoreEngineX/spass-core"
keywords = ["samsung", "password-manager", "decryption", "spass"]
categories = ["cryptography", "parser-implementations"]

[dependencies]
aes.workspace = true
cbc.workspace = true
pbkdf2.workspace = true
sha2.workspace = true
hmac.workspace = true

secrecy.workspace = true
zeroize.workspace = true
subtle.workspace = true

base64.workspace = true
hex.workspace = true
thiserror.workspace = true

csv = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["parser-spass", "export-csv"]

parser-spass = ["csv"]
export-csv = ["csv"]
export-json = ["serde", "serde_json"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "decrypt_bench"
harness = false
