[package]
name = "spass-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
spass = { path = "../spass-rs", features = ["export-json"] }
wasm-bindgen = "0.2"
serde_json = { workspace = true }
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory"]
